--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "homepage": "https://github.com/juhan-y/wetube-reloaded#readme",
   "dependencies": {
     "express": "^4.17.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
