220218 mongoose model's find function
~ # 6.12
callback function concept
mongodb, mongoose setting

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git+https://github.com/juhan-y/wetube-reloaded.git"
   },
   "scripts": {
-    "dev": "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon --exec babel-node src/init.js"
   },
   "author": "Juhan",
   "license": "MIT",
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/juhan-y/wetube-reloaded#readme",
   "dependencies": {
     "express": "^4.17.2",
+    "mongoose": "^6.2.2",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   },
