--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.2",
     "mongoose": "^6.2.2",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
     "pug": "^3.0.2"
   },
   "devDependencies": {
